<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  tools:context=".Activity">
  
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">
	
	   <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:text="@string/select_category_label" />
	
	    <Spinner
	        android:id="@+id/spinner1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView1"
	        android:layout_centerHorizontal="true"
	        android:entries="@array/category_array" />
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/spinner1"
	        android:layout_centerHorizontal="true"
	        android:paddingTop="@dimen/margin1"
	        android:text="@string/quantity_label" />
	    
	    <EditText
	      android:id="@+id/quantity_edit"
	      android:inputType="numberDecimal"
	      android:layout_width="@dimen/quantity_edit_width"
	      android:layout_height="wrap_content"
	      android:layout_centerHorizontal="true"
	      android:layout_below="@+id/textView2" />
	    
	
	    <LinearLayout
	        android:id="@+id/linearLayout1"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@+id/quantity_edit"
	    	android:paddingTop="@dimen/margin1">
	    	<TextView
	    	    android:id="@+id/textView3"
	      		android:text="@string/from_label" 
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_weight="1"
	      		android:layout_gravity="left"/>
	    	<TextView
	    	    android:id="@+id/textView4"
	      		android:text="@string/to_label" 
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_weight="1"
	      		android:layout_gravity="left"/>
	  	</LinearLayout>
	  
	    
	   <LinearLayout
	       	android:id="@+id/linearLayout2"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@+id/linearLayout1">
	    	<Spinner
	        	android:id="@+id/spinner2"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:entries="@array/temperature_array" />
	    	<Spinner
	        	android:id="@+id/spinner3"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:entries="@array/temperature_array" /> 
	  	</LinearLayout>
	  	
	   <LinearLayout
	        android:id="@+id/linearLayout3"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/linearLayout2"
	        android:paddingTop="@dimen/margin1">
	        <Button
	            android:id="@+id/convert_button"
	            android:layout_width="0dip" 
	            android:layout_height="fill_parent"
	            android:text="@string/convert_label"
	            android:layout_weight="1"
	            android:onClick="onConvertButtonClick" />
	        <Button
	            android:id="@+id/clear_button"
	            android:layout_width="0dip" 
	            android:layout_height="fill_parent"
	            android:text="@string/clear_label"
	            android:layout_weight="1"
	            android:onClick="onClearButtonClick" />
	    </LinearLayout>
	    
	   <TextView
	        android:id="@+id/textView5"
	        android:text="@string/result_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/linearLayout3"
	        android:layout_centerHorizontal="true"
	        android:paddingTop="@dimen/margin1" />
	  	
	   <TextView
	        android:id="@+id/textView6"
	        android:background="@drawable/rounded_border"
	        android:text=""
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView5"
	        android:gravity="center"
	        android:textSize="@dimen/result_text_size"
	        android:textStyle="bold"/>
	</RelativeLayout>
	
</ScrollView>
